hw9 minor refactor: Resume.java OrganizationSection.java